--- a/customers.html
+++ b/customers.html
@@ -20,7 +20,7 @@
 </style>
 <body>
     <header id="header"> </header>
-    <h1>Locations</h1>
+    <h1>Customer Page</h1>
     <div class="menu">
         <a href="index.html">Home</a>
         <a href="inventory.html">Inventory</a>
@@ -30,31 +30,26 @@
     </div>
     <table>
         <tr>
-            <th>Address</th>
-            <th>City</th>
-            <th>State</th>
-            <th>Zip Code</th>
+            <th>Name</th>
+            <th>Email</th>
         </tr>
         <tr>
-            <td>5235 SE Walhber St</td>
-            <td>Salem</td>
-            <td>OR</td>
-            <td>48656</td>
+            <td>Spongebob</td>
+            <td>pineapple@mail.com</td>
         </tr>
         <tr>
-            <td>4314 NW Rungar St</td>
-            <td>Vancouver</td>
-            <td>WS</td>
-            <td>84856</td>
+            <td>Bill</td>
+            <td>microsoft@mail.com</td>
         </tr>
         <tr>
-            <td>1642 SW Gumba St</td>
-            <td>Detroit</td>
-            <td>Michigun</td>
-            <td>79342</td>
+            <td>Steve</td>
+            <td>captainamerica@mail.com</td>
+        </tr>
+        <tr>
+            <td>Tony</td>
+            <td>ironman@mail.com</td>
         </tr>
     </table>
-
 
 </body>
 </html>
