--- a/employees.html
+++ b/employees.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 </head>
@@ -21,7 +20,7 @@
     </style>
 <body>
     <header id="header"> </header>
-    <h1>Inventory</h1>
+    <h1>Employee Page</h1>
     <div class="menu">
         <a href="index.html">Home</a>
         <a href="inventory.html">Inventory</a>
@@ -31,42 +30,31 @@
     </div>
     <table>
         <tr>
-            <th>Items</th>
-            <th>Costs</th>
-            <th>Quantity</th>
+            <th>Employee Name</th>
+            <th>Schedule</th>
+            <th>Email</th>
         </tr>
         <tr>
-            <td>Dungeons and Dragons Starter Set</td>
-            <td>20.00</td>
-            <td>20</td>
+            <td>Jonathan</td>
+            <td>Mon-Fri</td>
+            <td>flyingbubba@mail.com</td>
         </tr>
         <tr>
-            <td>Monopoloy</td>
-            <td>15.00</td>
-            <td>15</td>
+            <td>Keith</td>
+            <td>Sat-Mon</td>
+            <td>fruitjuice@mail.com</td>
         </tr>
         <tr>
-            <td>1967 Chevy Impala Car Model</td>
-            <td>100.00</td>
-            <td>1</td>
+            <td>Taylor</td>
+            <td>Mon-Sun</td>
+            <td>screenshift@mail.com</td>
         </tr>
         <tr>
-            <td>Nintendo Switch</td>
-            <td>300.00</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>Xbox One X</td>
-            <td>500.00</td>
-            <td>10</td>
-        </tr>
-        <tr>
-            <td>Playstation 5</td>
-            <td>500.00</td>
-            <td>5</td>
+            <td>Banagher</td>
+            <td>Wed-Sat</td>
+            <td>gundamdude@mail.com</td>
         </tr>
     </table>
-
 
 </body>
 </html>
