--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <a href="index.html">Home</a>
         <a href="inventory.html">Inventory</a>
         <a href="locations.html">Locations</a>
+        <a href="customers.html">Customers</a>
+        <a href="employees.html">employees</a>
     </div>
 
 
