--- a/locations.html
+++ b/locations.html
@@ -50,7 +50,7 @@
         <tr>
             <td>1642 SW Gumba St</td>
             <td>Detroit</td>
-            <td>Michigun</td>
+            <td>Michigan</td>
             <td>79342</td>
         </tr>
     </table>
