--- a/inventory.html
+++ b/inventory.html
@@ -27,7 +27,7 @@
         <a href="inventory.html">Inventory</a>
         <a href="locations.html">Locations</a>
         <a href="customers.html">Customers</a>
-        <a href="employees.html">employees</a>
+        <a href="employees.html">Employees</a>
     </div>
     <table>
         <tr>
