--- a/inventory.html
+++ b/inventory.html
@@ -21,11 +21,11 @@
     </style>
 <body>
     <header id="header"> </header>
-    <h1>Inventory</h1>
+    <h1>Products</h1>
     <div class="menu">
         <a href="index.html">Home</a>
-        <a href="inventory.html">Inventory</a>
-        <a href="locations.html">Locations</a>
+        <a href="inventory.html">Products</a>
+        <a href="locations.html">Store</a>
         <a href="customers.html">Customers</a>
         <a href="employees.html">Employees</a>
     </div>
